--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -2,16 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="@drawable/list_backshape"
+    android:elevation="2dp"
+    android:layout_gravity="center">
+    <View
+        android:layout_width="10dp"
+        android:layout_height="70dp"/>
     <ImageView
         android:id="@+id/profileImg"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
-
-    <LinearLayout
         android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:background="#00000000"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+    <View
+        android:layout_width="10dp"
+        android:layout_height="70dp"/>
+    <LinearLayout
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -19,16 +27,26 @@
             android:id="@+id/nameTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:textSize="25dp"
             android:textStyle="bold"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:fontFamily="@font/avenirbold"/>
 
         <TextView
             android:id="@+id/numberTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="TextView" />
+            android:textSize="18dp"
+            android:text="TextView"
+            android:fontFamily="@font/avenirbold"/>
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#00000000"
+        app:srcCompat="@drawable/remove_background" />
 
 </LinearLayout>
