--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -5,6 +5,7 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -14,14 +15,23 @@
             android:id="@+id/selectedImageView"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitCenter" />
 
-        <Gallery
-            android:id="@+id/simpleGallery"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:unselectedAlpha="50" />
+        <HorizontalScrollView
+            android:scrollbars="none"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="190dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+        </HorizontalScrollView>
 
     </LinearLayout>
 
