--- a/app/src/main/res/layout/add_alert.xml
+++ b/app/src/main/res/layout/add_alert.xml
@@ -1,18 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <EditText
-        android:id="@+id/editName"
-        android:layout_width="300dp"
-        android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content"/>
 
-    <EditText
-        android:id="@+id/editNum"
-        android:layout_width="300dp"
-        android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <View
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/editName"
+            android:layout_width="0dp"
+            android:layout_weight="10"
+            android:layout_height="50dp"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <View
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/editNum"
+            android:layout_width="0dp"
+            android:layout_weight="10"
+            android:layout_height="50dp"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
