--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -6,21 +6,29 @@
     android:background="@drawable/list_backshape"
     android:elevation="2dp"
     android:layout_gravity="center">
+
     <View
-        android:layout_width="10dp"
-        android:layout_height="70dp"/>
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_weight="1"/>
+
     <ImageView
         android:id="@+id/profileImg"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="70dp"
+        android:layout_weight="3"
         android:background="#00000000"
         app:srcCompat="@drawable/ic_launcher_foreground" />
+
     <View
-        android:layout_width="10dp"
-        android:layout_height="70dp"/>
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_weight="1"/>
+
     <LinearLayout
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="10"
         android:orientation="vertical">
 
         <TextView
@@ -44,8 +52,9 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="70dp"
+        android:layout_width="0dp"
         android:layout_height="70dp"
+        android:layout_weight="3"
         android:background="#00000000"
         app:srcCompat="@drawable/remove_background" />
 
