--- a/app/src/main/res/layout/add_alert.xml
+++ b/app/src/main/res/layout/add_alert.xml
@@ -14,10 +14,18 @@
             android:layout_height="50dp"
             android:layout_weight="1"/>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="2"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:text="NAME: "/>
+
         <EditText
             android:id="@+id/editName"
             android:layout_width="0dp"
-            android:layout_weight="10"
+            android:layout_weight="8"
             android:layout_height="50dp"/>
 
         <View
@@ -36,10 +44,18 @@
             android:layout_height="50dp"
             android:layout_weight="1"/>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="2"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:text="NUM: "/>
+
         <EditText
             android:id="@+id/editNum"
             android:layout_width="0dp"
-            android:layout_weight="10"
+            android:layout_weight="8"
             android:layout_height="50dp"/>
 
         <View
