--- a/app/src/main/res/layout/fragment_frag3.xml
+++ b/app/src/main/res/layout/fragment_frag3.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".frag3">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CHANGE"
+        android:id="@+id/changeBtn"
+        />
+
     <!-- TODO: Update blank fragment layout -->
     <fragment android:name="com.google.ar.sceneform.ux.ArFragment"
         android:id="@+id/ux_fragment"
