Fix Gravity Problem

--- a/app/src/main/res/layout/fragment_frag3.xml
+++ b/app/src/main/res/layout/fragment_frag3.xml
@@ -27,8 +27,9 @@
             <LinearLayout
                 android:id="@+id/armenu"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
         </HorizontalScrollView>
     </LinearLayout>
 
