--- a/app/src/main/res/layout/fragment_frag3.xml
+++ b/app/src/main/res/layout/fragment_frag3.xml
@@ -39,6 +39,18 @@
                 android:enabled="false"
                 />
 
+            <Button
+                android:id="@+id/model_reset_btn"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:layout_gravity="top|left"
+                android:background="@color/black"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:textSize="15sp"
+                android:text="RESET" />
+
         </FrameLayout>
 
         <HorizontalScrollView
