--- a/app/src/main/res/layout/fragment_frag1.xml
+++ b/app/src/main/res/layout/fragment_frag1.xml
@@ -24,7 +24,10 @@
 
     <Button
         android:id="@+id/addBtn"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_shape"
+        android:textColor="@color/white"
+        android:layout_margin="5dp"
         android:text="ADD" />
 </LinearLayout>
