--- a/app/src/main/res/layout/fragment_frag2.xml
+++ b/app/src/main/res/layout/fragment_frag2.xml
@@ -28,8 +28,11 @@
 
         <Button
             android:id="@+id/toggle_layout_button"
-            android:layout_width="150dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
+            android:textColor="@color/white"
+            android:layout_margin="5dp"
             android:text="switch"/>
 
     </LinearLayout>
