--- a/app/src/main/res/layout/item_armenu.xml
+++ b/app/src/main/res/layout/item_armenu.xml
@@ -3,19 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="160dp"
-    android:layout_height="150dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     tools:layout_editor_absoluteX="1dp"
     tools:layout_editor_absoluteY="1dp">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:textSize="25sp"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:textSize="20sp"
         android:gravity="center"
         android:textColor="@color/white"
         android:text="SAMPLE"
-        android:background="@color/blue"/>
+        android:background="@drawable/button_shape"/>
 </LinearLayout>
