--- a/app/src/main/res/drawable/list_backshape.xml
+++ b/app/src/main/res/drawable/list_backshape.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#EEE"/>
-    <corners android:radius="15dp"/>
+    <stroke android:color="@color/white" android:width="2dp"/>
+    <padding android:left="5dp"
+        android:top="5dp"
+        android:right="5dp"
+        android:bottom="5dp" />
     <solid android:color="@color/white"/>
+    <corners android:radius = "10dp"/>
 </shape>
