--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#243a78</color>
     <color name="dark_blue">#061c5a</color>
+    <color name="clasic_blue">#0f4c81</color>
 </resources>
