--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/toolBarTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="이나방"
+                android:text="채우공"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
