--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -5,7 +5,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/list_backshape"
     android:elevation="2dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:focusable="false"
+    android:focusableInTouchMode="false">
 
     <View
         android:layout_width="0dp"
@@ -54,6 +57,16 @@
             android:textColor="@color/black"
             android:background="#ffffff"/>
     </LinearLayout>
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text="EDIT"
+        android:id="@+id/editBtn"
+        android:background="@android:color/transparent"
+        android:textColor="@color/blue"/>
 
     <LinearLayout
         android:layout_width="0dp"
