--- a/app/src/main/res/layout/fragment_frag3.xml
+++ b/app/src/main/res/layout/fragment_frag3.xml
@@ -42,14 +42,14 @@
 
     <Button
         android:id="@+id/capture_btn"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_gravity="bottom|right"
-        android:background="@color/black"
+        android:layout_gravity="top|right"
+        android:background="@drawable/button_shape"
         android:textColor="@color/white"
         android:layout_margin="10dp"
-        android:textSize="15sp"
+        android:textSize="12sp"
         android:text="CAPTURE" />
 
     <HorizontalScrollView
