--- a/app/src/main/res/layout/item_armenu.xml
+++ b/app/src/main/res/layout/item_armenu.xml
@@ -15,6 +15,8 @@
         android:layout_height="50dp"
         android:textSize="20sp"
         android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
         android:textColor="@color/white"
         android:text="SAMPLE"
         android:background="@drawable/button_shape"/>
